fixed min-height of content to prevent flickering

--- a/app/src/stylus/layout/content.styl
+++ b/app/src/stylus/layout/content.styl
@@ -3,6 +3,7 @@
   padding-right @padding-left
   padding-top height_header
   padding-bottom @padding-top
+  min-height 700px
 
 [ng\:cloak]
 [ng-cloak]
